lib/stratiform/res/test/stratiform/tel/pos/comment-at-document-start.tel
# This is a comment
hello
