lib/stratiform/res/test/stratiform/tel/neg/e109-comment-in-tabulated-block.tel
# ID    # Name
row1 alice
# This is a comment in a tabulated block
row2 bob
